--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -15,6 +15,8 @@
         android:textSize="24sp"
         />
     <EditText
+        android:id="@+id/inputSuhu"
+        android:inputType="number"
         android:layout_marginTop="10dp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -58,7 +60,8 @@
     <TextView
         android:id="@+id/hasilText"
         android:layout_marginTop="20dp"
-
+        android:textSize="20sp"
+        android:textAlignment="center"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="@string/hasil"
